--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
 	],
 	"main": "./out/extension.js",
 	"contributes": {
+		"commands": [
+			{
+				"command": "extension.helloWorld",
+				"title": "Hello World"
+			}
+		],
 		"capabilities" : {
 			"completionProvider" : {
 				"resolveProvider": "true",
